--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "dayjs": "^1.11.13",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.6.3",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "smooth-scroll": "^16.1.3",
