--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && copy public\\_redirects build\\_redirects",
+    "build": "react-scripts build && cpx \"public/_redirects\" build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -57,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cpx": "^1.5.0"
   }
 }
