--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-scripts": "5.0.1",
     "smooth-scroll": "^16.1.3",
     "tesseract.js": "^6.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "cpx": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cpx": "^1.5.0"
   }
 }
